# TaskbarLyrics

./: .gitignore  CMakeLists.txt  CMakePresets.json  MoeKoeMusic_TaskbarLyrics_开发文档.md  README.md  vcpkg.json  计划书.md  问题推测.md  项目状态文档.md
.github/ISSUE_TEMPLATE/: config.yml  兼容性反馈.md  功能请求.md  错误报告.md
.github/workflows/: build.yml  release.yml
Docs/: MoeKoeMusic_TaskbarLyrics_开发文档.md  常见问题自查.md  版本更新日志.md  计划书.md  项目状态文档.md
moeKoe-taskbar-lyrics/: background.js  content.js  manifest.json  popup.html
moeKoe-taskbar-lyrics/resources/: settings.html
resources/: settings.html
scripts/: build.bat  pack_zip.py  package.ps1
src/: api_enabler.cpp  app_context.cpp  app_context.h  card_renderer.cpp  config.cpp  config.h  config_dialog.cpp  config_dialog.h  constants.h  crash_handler.cpp  d2d_settings_window.cpp  d2d_settings_window.h  fullscreen_detector.cpp  fullscreen_detector.h  http_server.cpp  http_server.h  krc_parser.cpp  krc_parser.h  logger.cpp  logger.h  lyric_renderer.cpp  lyrics_data.h  lyrics_parser.cpp  lyrics_parser.h  main.cpp  marquee_engine.cpp  message_window.cpp  message_window.h  native_messaging.cpp  native_messaging.h  process_monitor.cpp  process_monitor.h  renderer.cpp  renderer.h  renderer_utils.h  settings_window.cpp  settings_window.h  shell_companion.cpp  shell_companion.h  spectrum_capture.cpp  (+13 more)
src/config/: config.cpp  config.h
src/core/: app_context.cpp  app_context.h  crash_handler.cpp  crash_handler.h  main.cpp  message_window.cpp  message_window.h
src/lyrics/: krc_parser.cpp  krc_parser.h  lyrics_data.h  lyrics_parser.cpp  lyrics_parser.h
src/net/: api_enabler.cpp  api_enabler.h  http_server.cpp  http_server.h  native_messaging.cpp  websocket_client.cpp  websocket_client.h
src/render/: card_renderer.cpp  lyric_renderer.cpp  marquee_engine.cpp  renderer.cpp  renderer.h  renderer_utils.h  spectrum_capture.cpp  spectrum_capture.h  spring_animation.cpp
src/taskbar/: fullscreen_detector.cpp  shell_companion.cpp  shell_companion.h  taskbar_embedder.cpp  taskbar_embedder.h  taskbar_geometry.cpp  taskbar_window.cpp  taskbar_window.h
src/ui/: color_picker.cpp  color_picker.h  config_dialog.cpp  config_dialog.h  d2d_settings_window.cpp  d2d_settings_window.h  tray_commands.cpp  tray_commands.h  tray_icon.cpp  tray_icon.h
src/util/: logger.cpp  process_monitor.cpp  process_monitor.h
tests/: test_krc_parser.cpp  test_lyrics_parser.cpp
